--- a/SPA/views/index.jade
+++ b/SPA/views/index.jade
@@ -5,7 +5,7 @@ block content
     h1 Auth0 Multitenant Sample
     p Login to start using the resources available for your tenant
     br
-    button(onclick="signin()") Login
+    button#btn-login Login
   .logged-in-box(style="display:none;")
     h4 Welcome 
       span.nickname
@@ -21,24 +21,6 @@ block content
 
   script.
     var API_BASE_URL = 'http://' + window.location.hostname + ':' + 8080;
-    
-    var lock = new Auth0Lock('#{auth0ClientId}','#{auth0Domain}');
-    
-    function signin() {
-      lock.show();
-    }
-
-    function reloadProfile(token){
-      var id_token = token || localStorage.getItem('id_token');
-      lock.getProfile(id_token, function(err, profile) {
-        if (err) {
-          console.log('There was an error getting profile from id_token saved in localStorage ',err);
-          logout();
-        } else {
-          showLoggedInUser(profile);
-        }
-      });
-    }
 
     /*
     * Display profile properties of logged in user
@@ -51,17 +33,13 @@ block content
       $('.profile-image').attr('src', profile.picture);
     }
 
-    function logout(){
-      $.ajax({
-        type: 'GET',
-        url: 'https://#{auth0Domain}/v2/logout'
-      }).then(function(data){
-        localStorage.removeItem('id_token');
-        $('.login-box').show();
-        $('.logged-in-box').hide(); 
-      }).fail(function(err){
-        console.log('failed to logout',err);
-      });
+    function logout() {
+      // Remove tokens and expiry time from localStorage
+      localStorage.removeItem('access_token');
+      localStorage.removeItem('id_token');
+      localStorage.removeItem('expires_at');
+      $('.login-box').show();
+      $('.logged-in-box').hide(); 
     }
 
     function callAPI (){
@@ -83,22 +61,71 @@ block content
     }
 
     $(document).ready(function() {
-      var hash = lock.parseHash();
-      //handle redirection from iDP after login
-      if (hash) {
-        window.location.hash = ''; //clean hash
-        console.log('hash',hash);
-        if (hash.error) {
-          console.log('Error in parsed hash ' + hash.error );
-          logout
-         } else {
-          //initial login
-          localStorage.setItem('id_token', hash.id_token);
-          reloadProfile(hash.id_token);           
-        }
-      } else {
-        //handle case of page refreshed by already logged-in user
-        reloadProfile();
+
+      var webAuth = new auth0.WebAuth({
+        domain: '#{auth0Domain}',
+        clientID: '#{auth0ClientId}',
+        redirectUri: window.location.href,
+        audience: 'https://' + '#{auth0Domain}' + '/userinfo',
+        responseType: 'token id_token',
+        scope: 'openid profile'
+      });
+
+      var loginBtn = $('#btn-login');
+
+      loginBtn.click(function(e) {
+        e.preventDefault();
+        webAuth.authorize();
+      });
+
+      function setSession(authResult) {
+        // Set the time that the access token will expire at
+        var expiresAt = JSON.stringify(
+          authResult.expiresIn * 1000 + new Date().getTime()
+        );
+        localStorage.setItem('access_token', authResult.accessToken);
+        localStorage.setItem('id_token', authResult.idToken);
+        localStorage.setItem('expires_at', expiresAt);
       }
+
+      function isAuthenticated() {
+        // Check whether the current time is past the
+        // access token's expiry time
+        var expiresAt = JSON.parse(localStorage.getItem('expires_at'));
+        return new Date().getTime() < expiresAt;
+      }
+
+      function reloadProfile(){
+        var accessToken = localStorage.getItem('access_token');
+
+        webAuth.client.userInfo(accessToken, function(err, profile) {
+          if (err) {
+            console.log('There was an error getting profile from id_token saved in localStorage ',err);
+            logout();
+          } else {
+            showLoggedInUser(profile);
+          }
+        });
+      }
+
+      function handleAuthentication() {
+        webAuth.parseHash(function(err, authResult) {
+          if (authResult && authResult.accessToken && authResult.idToken) {
+            window.location.hash = '';
+            setSession(authResult);
+            reloadProfile();
+          } else if (err) {
+            console.log(err);
+            alert(
+              'Error: ' + err.error + '. Check the console for further details.'
+            );
+          } else {
+            //handle case of page refreshed by already logged-in user
+            reloadProfile();
+          }
+        });
+      }
+
+      handleAuthentication();
 
     });
