--- a/SPA/views/layout.jade
+++ b/SPA/views/layout.jade
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')    
     script(src='//code.jquery.com/jquery-2.1.1.min.js')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
-    script(src="https://cdn.auth0.com/js/lock-8.js")
+    script(src="http://cdn.auth0.com/js/auth0/9.0.0-beta.2/auth0.min.js")
   body
     .container
       .bs-component
