--- a/SPA/views/index.jade
+++ b/SPA/views/index.jade
@@ -49,7 +49,7 @@ block content
         type: 'GET',
         url: API_BASE_URL + '/api/users',
         headers:{
-          Authorization: 'Bearer ' + localStorage.getItem('id_token')
+          Authorization: 'Bearer ' + localStorage.getItem('access_token')
         }
       }).then(function(data){
         $('.api-result').text(JSON.stringify(data,null,2));
@@ -66,7 +66,7 @@ block content
         domain: '#{auth0Domain}',
         clientID: '#{auth0ClientId}',
         redirectUri: window.location.href,
-        audience: 'https://' + '#{auth0Domain}' + '/userinfo',
+        audience: '#{apiClientAudience}',
         responseType: 'token id_token',
         scope: 'openid profile'
       });
